# plover-hangeul

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
hangeul/: system.py
hangeul/dictionaries/: .briefs.json.swp  commands.json  main.py  punctuation.json  rh-numpad.json  user.json
